samples/_failures_safe/1761346093_e5f3e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0f6be93.c: In function ‘main’:
./samples/SAFE/__tmp_e0f6be93.c:175:9: error: expected declaration or statement at end of input
  175 |         printf("Invalid edge count\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e0f6be93.c:175:9: error: expected declaration or statement at end of input
